# openapi-department-api.json
@@ -1,12 +1,12 @@
 {
   "openapi" : "3.0.1",
   "info" : {
-    "title" : "${springdoc.title}",
+    "title" : "Department API",
     "description" : "Documentation department-api v1.0",
     "version" : "2.5.0"
   },
   "servers" : [ {
-    "url" : "http://192.168.1.3:8080",
+    "url" : "http://192.168.1.4:8080",
     "description" : "Generated server url"
   } ],
   "paths" : {
@@ -390,8 +390,17 @@
     "/api/v1/reports/pdf/full-report" : {
       "get" : {
         "tags" : [ "report-controller" ],
-        "summary" : "Generate a PDF report containing all the departments along with all the employees",
+        "summary" : "Generate a PDF report containing all the departments along with all the employees in the specified language",
         "operationId" : "generatePdfFullReport",
+        "parameters" : [ {
+          "name" : "language",
+          "in" : "query",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "enum" : [ "EN", "ES", "DE", "EL" ]
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "OK",
@@ -410,8 +419,17 @@
     "/api/v1/reports/pdf/combined-report" : {
       "get" : {
         "tags" : [ "report-controller" ],
-        "summary" : "Generate a combined PDF report from two separate reports",
+        "summary" : "Generate a combined PDF report from two separate reports in the specified language",
         "operationId" : "generateCombinedPdfReport",
+        "parameters" : [ {
+          "name" : "language",
+          "in" : "query",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "enum" : [ "EN", "ES", "DE", "EL" ]
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "OK",
@@ -749,13 +767,13 @@
       "PageEmployeeDTO" : {
         "type" : "object",
         "properties" : {
-          "totalElements" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
           "totalPages" : {
             "type" : "integer",
             "format" : "int32"
+          },
+          "totalElements" : {
+            "type" : "integer",
+            "format" : "int64"
           },
           "first" : {
             "type" : "boolean"
@@ -894,13 +912,13 @@
       "PageDepartmentDTO" : {
         "type" : "object",
         "properties" : {
-          "totalElements" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
           "totalPages" : {
             "type" : "integer",
             "format" : "int32"
+          },
+          "totalElements" : {
+            "type" : "integer",
+            "format" : "int64"
           },
           "first" : {
             "type" : "boolean"
